@@ -502,7 +502,7 @@ SQLRETURN SQLSetConnectAttrW( SQLHDBC connection_handle,
     value = __attr_override_wide( connection, SQL_HANDLE_DBC, attribute, value, &string_length, buffer );
 
     /*
-     * we need to save this even if connected so we can use it for the next connetc
+     * we need to save this even if connected so we can use it for the next connect
      */
     if ( attribute == SQL_ATTR_LOGIN_TIMEOUT )
     {
