@@ -46,7 +46,7 @@ Config Files:
 	_odbcinst_UserINI.c
 	
 	In anycase; you can override where unixODBC looks for its system
-	config files by setting the ODBCSYSINI enviroment variable during 
+	config files by setting the ODBCSYSINI environment variable during 
 	the use of unixODBC.
       
 Resources:
